<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityDatabase"
    android:background="#E9F2BD">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/drinks"
        android:id="@+id/drinks"
        android:clickable="true"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginBottom="44dp"
        android:layout_alignBottom="@+id/food"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/food"
        android:id="@+id/food"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginTop="114dp"
        android:clickable="true"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
